--- a/config.ini
+++ b/config.ini
@@ -12,9 +12,9 @@ API_SITE =
 
 [SMTP]
 # Sending email when something happens.
-HOST =smtp.office365.com
-PORT =587
-USERNAME =justtestthem@outlook.com
-PASSWORD =bvzfvrwnwwsfeqnr
-MAIL_FROM =justtestthem@outlook.com
-MAIL_TO =justtrythem@outlook.com
+HOST = 
+PORT = 
+USERNAME = 
+PASSWORD = 
+MAIL_FROM = 
+MAIL_TO = 
